fixed spacing issues and select box size

--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,8 @@ input[type="text"] {
 }
 
 .row {
-    
+    overflow: auto;
+  	zoom: 1;
     display: block;
     width: 100%;
 }
@@ -134,13 +135,15 @@ input[type="text"] {
     width: 50%;
 }
 
-select {
-    
+select {    
     width: 100%;
+    border: 0;
+	font-size:.9em;
+    border-radius: 0;
+    height: 26px;
 }
 
 label {
-    
     margin: 1rem 0;
 }
 
